--- a/public/src/view/template/header.html
+++ b/public/src/view/template/header.html
@@ -12,7 +12,7 @@
   <div class="view-name-box">
     <div class="view-name">{{viewname}}</div>
   </div>
-  <div ui-sref="home" class="logo-box">
+  <div ui-sref="home" ng-click="toggleMenu()" class="logo-box">
     <div class="logo-box-text-holder">
       hஇme
       <!-- ᚻᛰᛖᛊ -->
