--- a/public/src/css/styles/_taskSelection.scss
+++ b/public/src/css/styles/_taskSelection.scss
@@ -59,3 +59,62 @@ div.task-container{
 .task-btn-container{
   padding: 60px;
 }
+
+.create-task-container {
+  width: 100%;
+}
+
+.create-task-container {
+  position: relative;
+  background: rgba(255,255,255,1);
+  font-size: $fontSize4;
+  padding: 30px;
+
+  textarea {
+    width: 98%;
+    font-size: $fontSize2;
+    border: 1px solid rgba(0,0,0,1);
+    overflow-y: auto;
+    height: $fontSize2*20;
+  }
+}
+
+.create-task-container input:focus {
+  outline-color: white;
+}
+.create-task-container textarea:focus {
+  outline-color: $redBackground;
+}
+
+.create-task-form-input {
+  height: $boxHeight2;
+  font-size: $fontSize3;
+  color: white;
+  background: $redBackground;
+  width: 95%;
+  margin:10px auto 10px auto;
+}
+
+.create-task-form-select-input {
+  height: $boxHeight2;
+  font-size: $fontSize3;
+  color: white;
+  background: $redBackground;
+  width: 25%;
+  margin:10px auto 10px auto;
+}
+
+.create-task-form-checkbox-input {
+  height: $boxHeight2;
+  width: 95%;
+  margin:10px auto 40px auto;
+}
+
+.create-task-form-add-button {
+  height: $boxHeight3;
+  width: 25%;
+  background: $redBackground;
+  color: white;
+  font-size: $fontSize3;
+  text-align: center;
+}
