--- a/public/src/view/template/editTasks_template.html
+++ b/public/src/view/template/editTasks_template.html
@@ -26,8 +26,11 @@
           </div>
         </div>
         <div class="task-right-info" ng-click="editFormVisibility = !editFormVisibility">
-          <svg height="30" width="60">
+          <svg height="30" width="60" ng-hide="editFormVisibility">
             <polyline points="0,0 30,30 60,0 54,0 30,24 6,0" style="fill:#B8B1B1" />
+          </svg>
+          <svg height="30" width="60" ng-show="editFormVisibility">
+            <polyline points="0,30 30,0 60,30 54,30 30,6 6,30" style="fill:#B8B1B1" />
           </svg>
         </div>
       </div>
