--- a/public/src/view/mainAlerts.html
+++ b/public/src/view/mainAlerts.html
@@ -18,7 +18,7 @@
             </div>
             </div>
             <div class="checkbox-wrap">
-              <input class="done-checkbox"type="checkbox" ng-click="done(task.propertymaintenanceid, task.alertid)" name="name" value="DONE">
+              <input class="done-button" type="button" ng-click="done(task.propertymaintenanceid, task.alertid)" name="name" value="DONE">
             </div>
             <div ng-if="task.alertid">
               <input class="done-checkbox snooze" type="checkbox" ng-click="snooze(task.alertid)" name="name" value="SNOOZE">
