changed user settings photo

--- a/public/src/css/styles/_userSettings.scss
+++ b/public/src/css/styles/_userSettings.scss
@@ -41,6 +41,8 @@
 .submit-button {
 display: inline-block;
 font-size: 38px;
+text-decoration: none;
+background: white;
 // background: #2D8CFF ;
 //  color: white;
 }
