--- a/public/src/view/userSettings.html
+++ b/public/src/view/userSettings.html
@@ -3,7 +3,7 @@
 
     <div class="userPic-container">
       <img class="userPic" ng-if="user.photo" ng-src="{{user.photo}}" alt="" />
-      <img class="userPic" ng-if="!user.photo" src="http://www.clker.com/cliparts/j/u/p/E/j/x/weed-md.png" alt="" />
+      <img class="userPic" ng-if="!user.photo" src="https://lh3.googleusercontent.com/--KpygdWrSHs/Vpdq-UD5C0I/AAAAAAAAAuw/evoVPd2Isxw/w506-h750/AWESOME%2BFACEBOOK%2BPROFILE%2BPICTURES1.jpg" alt="" />
     </div>
 
     <div class="edit-box">
