--- a/public/src/css/styles/_mainAlerts.scss
+++ b/public/src/css/styles/_mainAlerts.scss
@@ -88,10 +88,6 @@
   background: rgba(255,255,255,1);
   font-size: $fontSize3;
 }
-.done-checkbox{
-  height: 60px;
-  width: 60px;
-}
 .done-button {
   padding: 10px;
   font-size: $fontSize3;
@@ -99,11 +95,18 @@
   background-color: $redBackground;
 }
 .checkbox-wrap{
-  padding-right: 60px;
+  padding-right: 30px;
 }
 .snooze{
-  margin-right: 60px;
+  margin-right: 15px;
+  padding: 10px;
+  font-size: $fontSize3;
+  color: white;
+  background-color:#b20000;
 }
 .redAlert {
   background-color: #ff5a5f;
+}
+.done-darkred{
+  background-color: #b20000;
 }
