snooze buton place holder

--- a/public/src/view/mainAlerts.html
+++ b/public/src/view/mainAlerts.html
@@ -31,7 +31,7 @@
           <input type="button" name="CANCEL" value="CANCEL" class="delete-cancel prop-delete-confirm-button" ng-click="propDeleteConfirmVisiblity = !propDeleteConfirmVisiblity">
         </div>
         <div class="prop-delete-confirm-container" ng-show="propSnoozeConfirmVisiblity">
-          <input type="button" name="DELETE" value="DONE" class="delete-confirm prop-delete-confirm-button"  ng-click="snooze(task.alertid)">
+          <input type="button" name="SNOOZE" value="DONE" class="delete-confirm prop-delete-confirm-button"  ng-click="snooze(task.alertid)">
           <input type="button" name="CANCEL" value="CANCEL" class="delete-cancel prop-delete-confirm-button" ng-click="propDeleteConfirmVisiblity = !propDeleteConfirmVisiblity">
         </div>
         <div class="alert-bottom">
