--- a/public/src/css/styles/_signup.scss
+++ b/public/src/css/styles/_signup.scss
@@ -1,3 +1,9 @@
-.signup-container{
-  text-align: center;
+.backgroundImg{
+  background-position: center center;
+  background-image: url('../../../build/assets/grey_sky_house.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.marginBottom{
+  margin-bottom: 315px;
 }
