--- a/public/src/view/template/signup_template.html
+++ b/public/src/view/template/signup_template.html
@@ -1,6 +1,6 @@
-<div class="login-container">
+<div class="login-container backgroundImg">
   <div class="">
-    <form class="" ng-submit="signUp()">
+    <form class="marginBottom" ng-submit="signUp()">
       <div class="credential submit-btn">
         <input class="input-lg" ng-model="firstName" type="text" name="name" value="" placeholder="First name">
       </div>
