--- a/public/src/css/styles/_header.scss
+++ b/public/src/css/styles/_header.scss
@@ -16,6 +16,7 @@ a {
 
 
 
+
   .menu-btn-box {
     //position: absolute;
     display: flex;
@@ -77,6 +78,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-right: 30px;
     // background: $main;
     // flex-grow: 1
       .logo-img {
