--- a/public/src/view/template/header.html
+++ b/public/src/view/template/header.html
@@ -24,7 +24,7 @@
 
 
 
-<div class="menu fade" ng-show="menuShowing">
+<div class="menu fade" ng-show="menuShowing" style="background-color: green;">
   <ul class="menu-items-list" >
     <a ui-sref='login' ng-click="toggleMenu()"><li>login</li></br>
     <a ui-sref='properties' ng-click="toggleMenu()"><li>properties</li></a></br>
