restyled an arrow, styled when adding a custom task during property creation, add checks in sql for duplicating alerts

--- a/public/src/css/styles/_taskSelection.scss
+++ b/public/src/css/styles/_taskSelection.scss
@@ -118,3 +118,9 @@ div.task-container{
   font-size: $fontSize3;
   text-align: center;
 }
+
+.custom-task {
+  width: 100%;
+  border-bottom: 1px solid $background;
+  font-size: $fontSize4;
+}
