--- a/public/src/view/properties.html
+++ b/public/src/view/properties.html
@@ -3,7 +3,12 @@
 
   <div class="prop" ng-repeat="prop in properties" ng-swipe-left="propDeleteButtonVisibility = true" ng-swipe-right="propDeleteButtonVisibility = false">
     <div class="prop-primary-box" ui-sref="mainAlerts({propertyId: prop.id})">
-      <span>{{prop.name}}</span> <span class="left-bracket"> < </span>
+      <span>{{prop.name}}</span>
+      <span class="left-bracket">
+        <svg width="30" height="60"  ng-hide="editFormVisibility">
+          <polyline points="30,0 0,30 30,60 30,54 6,30 30,6" style="fill:#B8B1B1" />
+        </svg>
+      </span>
     </div>
     <div class="prop-delete-button" ng-show="propDeleteButtonVisibility" ng-click="propDeleteConfirmVisiblity = !propDeleteConfirmVisiblity; propDeleteButtonVisibility = !propDeleteButtonVisibility">
       <svg width="60px" height="60px">
