--- a/public/src/view/template/header.html
+++ b/public/src/view/template/header.html
@@ -28,7 +28,7 @@
   <ul class="menu-items-list" >
     <a ui-sref='login' ng-click="toggleMenu()"><li>login</li></br>
     <a ui-sref='properties' ng-click="toggleMenu()"><li>properties</li></a></br>
-    <!-- <a ui-sref='mainAlerts' ng-click="toggleMenu()"><li>upcoming</li></a></br> -->
+    <a ui-sref='mainAlerts' ng-click="toggleMenu()"><li>upcoming</li></a></br>
     <a ui-sref='userSettings' ng-click="toggleMenu()"><li>user settings</li></a></br>
     <a ui-sref='contact' ng-click="toggleMenu()"><li>about</li></a>
     <a ui-sref='home' ng-click="toggleMenu()"><li><logout-directive></logout-directive></li></a>
