--- a/public/src/view/template/header.html
+++ b/public/src/view/template/header.html
@@ -7,7 +7,7 @@
         <span></span>
         <span></span>
       </div>
-    </buton>
+    </button>
   </div>
   <div class="view-name-box">
     <div class="view-name">{{viewname}}</div>
