--- a/public/src/css/styles/_header.scss
+++ b/public/src/css/styles/_header.scss
@@ -13,10 +13,6 @@ a {
   border-bottom: 2px solid #dce0e0;
   background-color: white;
 
-
-
-
-
   .menu-btn-box {
     //position: absolute;
     display: flex;
@@ -30,6 +26,8 @@ a {
     // background-color: lightgrey;
 
       .menu-btn {
+        width: 80%;
+        height: auto;
         position: relative;
         font-size: 2.7rem;
         text-align: center;
@@ -143,7 +141,7 @@ a {
 /* Icon 1 */
 
 #nav-icon3 {
-  width: 60px;
+  width: 100%;
   height: 45px;
   position: relative;
   margin: 50px auto;
