--- a/public/src/css/styles/_properties.scss
+++ b/public/src/css/styles/_properties.scss
@@ -8,12 +8,11 @@ $propBoxWidth: 100%;
   padding-top: 50px;
   background-size: cover;
   background-position: center center;
+}
 
-
-  }
 .prop {
   position: relative;
-  font-size: 3rem;
+  font-size: 1.5rem;
   text-align: center;
   margin-bottom: 40px;
   height: $propBoxHeight;
@@ -25,18 +24,31 @@ $propBoxWidth: 100%;
   justify-content: center;
 }
 .prop-primary-box {
+  width: 100%;
+  height: $propBoxHeight;
   position: absolute;
   top: 0;
   left: 0;
-  height: $propBoxHeight;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   z-index: 1;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 1rem 0 1rem;
+}
+
+.prop-primary-box-centerer {
+  width: 100%;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  padding: 39px;
+  align-items: center;
+}
+
+.left-bracket {
+  width: auto;
+  height: auto;
+  color: $background;
 }
 
 .prop-delete-button {
@@ -89,8 +101,4 @@ $propBoxWidth: 100%;
 
 .float-right {
   float: right;
-}
-
-.left-bracket {
-  color: $background;
 }
