--- a/public/src/view/properties.html
+++ b/public/src/view/properties.html
@@ -13,7 +13,7 @@
       </div>
     </div>
     <div class="prop-delete-button" ng-show="propDeleteButtonVisibility" ng-click="propDeleteConfirmVisiblity = !propDeleteConfirmVisiblity; propDeleteButtonVisibility = !propDeleteButtonVisibility">
-      <svg width="100%" height="100%">
+      <svg width="60" height="60">
         <line x1="10" y1="10" x2="50" y2="50" stroke="white" stroke-width="10" />
         <line x1="10" y1="50" x2="50" y2="10" stroke="white" stroke-width="10" />
       </svg>
