fixing styling login, mainAlerts, properties, propertySettings

--- a/public/src/css/base/_base.scss
+++ b/public/src/css/base/_base.scss
@@ -23,7 +23,7 @@ $boxHeight2: 50px;
 $boxHeight3: 70px;
 
 
-$fontSize2: 20px;
+$fontSize2: .5rem;
 $fontSize3: 1rem;
-$fontSize4: 45px;
-$fontSize5: 59px;
+$fontSize4: 1.5rem;
+$fontSize5: 2rem;
