--- a/public/src/view/mainAlerts.html
+++ b/public/src/view/mainAlerts.html
@@ -41,10 +41,10 @@
             </div>
           </div>
           <div class="alert-right-arrow" ng-click="notesVisibility = !notesVisibility">
-            <svg height="30" width="60" ng-hide="notesVisibility">
+            <svg viewBox="0 0 60 30" ng-hide="notesVisibility">
               <polyline points="0,0 30,30 60,0 54,0 30,24 6,0" style="fill:#B8B1B1" />
             </svg>
-            <svg height="30" width="60" ng-show="notesVisibility">
+            <svg viewBox="0 0 60 30" ng-show="notesVisibility">
               <polyline points="0,30 30,0 60,30 54,30 30,6 6,30" style="fill:#B8B1B1" />
             </svg>
           </div>
