--- a/public/src/view/template/propertySettings_template.html
+++ b/public/src/view/template/propertySettings_template.html
@@ -2,7 +2,7 @@
   <div class="propertyToggles">
     <div class="switch-container-container">
       <div class="setting-description">
-        <span>Text Notification</span>
+        <span>Text Notification</span><span class="deprication-note">(feature depricated)</span>
       </div>
       <div class="switch-container">
         <label class="switch">
@@ -22,7 +22,7 @@
        </label>
       </div>
     </div>
-    <div class="switch-container-container">
+    <!-- <div class="switch-container-container">
       <div class="setting-description">
         <span>Weather</span>
       </div>
@@ -32,6 +32,6 @@
          <div class="slider round"></div>
        </label>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
