--- a/public/src/view/template/signup_template.html
+++ b/public/src/view/template/signup_template.html
@@ -1,19 +1,19 @@
 <div class="login-container backgroundImg">
-  <div class="">
-    <form class="marginBottom" ng-submit="signUp()">
-      <div class="credential submit-btn">
+  <div class="signup-form-container">
+    <form class="signup-form" ng-submit="signUp()">
+      <div class="credential">
         <input class="input-lg" ng-model="firstName" type="text" name="name" value="" placeholder="First name">
       </div>
-      <div class="credential submit-btn">
+      <div class="credential">
         <input class="input-lg" ng-model="lastName" type="text" name="name" value="" placeholder="Last name">
       </div>
-      <div class="credential submit-btn">
+      <div class="credential">
         <input class="input-lg" server-error ng-model="email" type="email"  required name="name" value="" placeholder="email" ng-messages="loginForm.email.$error">
       </div>
-      <div class="credential submit-btn">
+      <div class="credential">
         <input class="input-lg" ng-model="password" type="password" name="name" value="" placeholder="password" ng-messages="loginForm.password.$error">
       </div>
-      <div class="credential submit-btn">
+      <div class="credential">
         <input class="input-lg" ng-model="phone" type="tel"  required ng-keyup="phoneNumberStyle($event)"  placeholder="(XXX)XXX-XXXX" >
       </div>
       <div>
