login page responsive and cursors styled

--- a/public/src/css/base/_base.scss
+++ b/public/src/css/base/_base.scss
@@ -27,3 +27,13 @@ $fontSize2: .5rem;
 $fontSize3: 1rem;
 $fontSize4: 1.5rem;
 $fontSize5: 2rem;
+
+
+
+.pointer-hand{
+  cursor: pointer;
+}
+
+.pointer-default{
+  cursor: default;
+}
