--- a/public/src/css/styles/_login.scss
+++ b/public/src/css/styles/_login.scss
@@ -9,7 +9,7 @@
   text-align: center;
   height: 90vh;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   padding-top: 1.5rem;
 }
 
