style: header adjustment, property creation pages

--- a/public/src/css/base/_base.scss
+++ b/public/src/css/base/_base.scss
@@ -18,9 +18,9 @@ body {
   background-color: $background;
 }
 
-$boxHeight1: 30px;
-$boxHeight2: 50px;
-$boxHeight3: 70px;
+$boxHeight1: 1rem;
+$boxHeight2: 2rem;
+$boxHeight3: 3rem;
 
 
 $fontSize2: .5rem;
