--- a/public/src/css/styles/_propertyForm.scss
+++ b/public/src/css/styles/_propertyForm.scss
@@ -13,13 +13,13 @@
 .createPropertyInputs-title {
   font-family: $body-font;
   font-size: $fontSize5;
-  padding: 30px;
+  padding: 1rem;
   background: rgba(255,255,255,1);
   margin-bottom: 5px;
 }
 .createPropertyInputs-input {
   width: 100%;
-  padding: 30px;
+  padding: 1rem;
   background: rgba(255,255,255,1);
   font-size: $fontSize3;
 
@@ -34,7 +34,7 @@
 
 .createPropertyInputs-submit {
   width: 100%;
-  padding: 30px;
+  padding: 1rem;
   background: rgba(255,255,255,1);
   text-align: right;
 }
