--- a/public/src/css/styles/_taskSelection.scss
+++ b/public/src/css/styles/_taskSelection.scss
@@ -2,10 +2,10 @@ div.task-container{
   display: flex;
   justify-content: flex-start;
   font-size: $fontSize4;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-top: .3rem;
+  padding-bottom: .3rem;
+  padding-left: .3rem;
+  padding-right: .3rem;
 
 }
 
@@ -23,8 +23,8 @@ div.task-container{
 }
 
 .task-selection-checkbox{
-  width: 60px;
-  height: 60px;
+  width: 1rem;
+  height: 1rem;
 }
 
 .custom-task-btn {
