--- a/public/src/css/styles/_header.scss
+++ b/public/src/css/styles/_header.scss
@@ -142,9 +142,8 @@ a {
 
 #nav-icon3 {
   width: 3rem;
-  height: 45px;
+  height: 3rem;
   position: relative;
-  margin: 50px auto;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
@@ -159,10 +158,10 @@ a {
 #nav-icon3 span {
   display: block;
   position: absolute;
-  height: 9px;
+  height: .3rem;
   width: 100%;
   background: $hamburger-icon;
-  border-radius: 9px;
+  border-radius: .4rem;
   opacity: 1;
   left: 0;
   -webkit-transform: rotate(0deg);
@@ -178,19 +177,19 @@ a {
 /* Icon 3 */
 
 #nav-icon3 span:nth-child(1) {
-  top: 0px;
+  top: .5rem;
 }
 
 #nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
-  top: 18px;
+  top: 1.25rem;
 }
 
 #nav-icon3 span:nth-child(4) {
-  top: 36px;
+  top: 2rem;
 }
 
 #nav-icon3.open span:nth-child(1) {
-  top: 18px;
+  top: 1rem;
   width: 0%;
   left: 50%;
 }
@@ -210,7 +209,7 @@ a {
 }
 
 #nav-icon3.open span:nth-child(4) {
-  top: 18px;
+  top: 1rem;
   width: 0%;
   left: 50%;
 }
