--- a/public/src/view/template/header.html
+++ b/public/src/view/template/header.html
@@ -14,7 +14,8 @@
   </div>
   <div ui-sref="home" ng-click="closeMenu()" class="logo-box">
     <div class="logo-box-text-holder">
-      hஇme
+        remember<span style="color: #BAAEAE;">the</span>.date
+      <!-- hஇme -->
       <!-- ᚻᛰᛖᛊ -->
       <!-- h卍me -->
     </div>
