--- a/public/src/css/styles/_header.scss
+++ b/public/src/css/styles/_header.scss
@@ -256,7 +256,9 @@ a {
     padding-left: 10px;
     padding-bottom: 10px;
   }
-  .header-container .logo-box {
-    padding-right: 161px;
-  }
+
+  // for rememberthe.date logo
+  // .header-container .logo-box {
+  //   padding-right: 161px;
+  // }
 }
